package system.personne;

public class Professeur extends  Personne{
    public Professeur(String num, String nom, String prenom) {
        super(num, nom, prenom);
    }
}
