package system.personne;

public class Surveillant extends  Personne{
    public Surveillant(String num, String nom, String prenom) {
        super(num, nom, prenom);
    }
}
