@startuml

package "system.epreuve" {

    class Epreuve {
        - codeECUE: String
        - duree: int
        - datePassage: LocalDate
        - heurePassage: String
        + getCodeECUE(): String
        + getDuree(): int
        + getDatePassage(): LocalDate
        + getHeurePassage(): String
        + setCodeECUE(codeECUE: String): void
        + setDuree(duree: int): void
        + setDatePassage(datePassage: LocalDate): void
        + setHeurePassage(heurePassage: String): void
        + addSurveillant(surveillant: Surveillant): void

    }


    Enum Modalite {
        Oral
        Ecrit
        QCM
        Ordi
        Projet
        TP
    }


}
package "system.personne" {
    abstract Personne {
        - num: String
        - nom: String
        - prenom: String
        + getNum(): String
        + getNom(): String
        + getPrenom(): String
        + setNum(num: String): void
        + setNom(nom: String): void
        + setPrenom(prenom: String): void

    }

    class Etudiant extends Personne{

        }
    class Surveillant extends Personne{

        }
    class Professeur extends Personne{

        }
    Enum Cursus {
        E1
        E2
        E3
        E4
        E5
    }

}
package "system.Fraude"{
    abstract class Fraude {
        - date: LocalDate
        - contenu: String
        - description: String


        + getDate(): LocalDate
        + getContenu(): String
        + getDescription(): String
        + setDate(date: LocalDate): void
        + setContenu(contenu: String): void
        + setDescription(description: String): void

    }

    class FraudeIAG extends Fraude {
        - final String type = "IAG"
    }

    class FraudePapier extends Fraude {
        - final String type = "PAPIER"
    }

    class FraudeCalculatrice extends Fraude {
        - final String type = "CALCULATRICE"
    }
    class FraudeIAGConnecte extends FraudeIAG {

        - adresseIP: String
        + getAdresseIP(): String
        + setAdresseIP(adresseIP: String): void
    }
}
package "system" {
    class Formulaire {

         + rechercheFiltre(): String
         + statistiques(): String
         + graphe(): String
         + getEtudiants(): Etudiants[]
         + getEpreuves(): Epreuve[]
         + getFraudes(): Fraude[]
         + toString(): String
     }
}

Modalite "1"--"1..*" Epreuve
Professeur "1"--"1" Epreuve
Surveillant "1..*"--"1" Epreuve
Etudiant "1..*"--"1" Cursus
"system.Fraude.Fraude" "1..*"--"1" Formulaire
Epreuve "1..*"--"1" Formulaire
Etudiant "0..*"--"1" Formulaire

@enduml